# pacecar

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install-pawnio.ps1
assets/: app_32x32.rgba  app_48x48.rgba
docs/: Design.md  Start.md  Tasks.md
docs/tasks/: 01-project-setup.md  02-config-system.md  03-metrics-infrastructure.md  04-cpu-metrics.md  05-memory-metrics.md  06-gpu-metrics.md  07-network-metrics.md  08-disk-metrics.md  09-overlay-behavior.md  10-ui-framework.md  10a-gauge-widget.md  10b-sparkline-widget.md  10c-panel-widget.md  10d-settings-ui.md  11-global-hotkey.md  12-system-tray.md  13-integration.md  14-polish.md  15-testing-infrastructure.md
hwmon-shim/: HwMon.cs  hwmon-shim.csproj
src/: app.rs  config.rs  hotkey.rs  icon.rs  lib.rs  main.rs  overlay.rs  specs.rs  tray.rs
src/metrics/: cpu.rs  discovery.rs  disk.rs  gpu.rs  gpu_d3dkmt.rs  hwmon.rs  memory.rs  mod.rs  network.rs  ping.rs
src/snapshots/: pacecar__config__tests__snapshot_default_config.snap
src/ui/: gauge.rs  history.rs  mod.rs  panel.rs  settings.rs  sparkline.rs  specs.rs
src/ui/snapshots/: pacecar__ui__panel__tests__cpu_gauge_panel.snap  pacecar__ui__panel__tests__disk_text_panel.snap  pacecar__ui__panel__tests__gpu_sparkline_panel.snap  pacecar__ui__panel__tests__network_text_panel.snap  pacecar__ui__panel__tests__ram_gauge_panel.snap
tests/: lifecycle.rs
