[package]
name = "pacecar"
version = "0.1.0"
edition = "2024"

[features]
default = []
nvidia = ["dep:nvml-wrapper"]

[dependencies]
eframe = "0.29"
sysinfo = "0.33"
tray-icon = "0.19"
muda = "0.15"
global-hotkey = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
nvml-wrapper = { version = "0.10", optional = true }
image = { version = "0.25", default-features = false, features = ["ico"] }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
mockall = "0.13"
insta = "1"
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
